syntax = "proto3";
package freemasonry.gateway.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/staking/v1beta1/staking.proto";

option go_package = "freemasonry.cc/blockchain/x/gateway/types";

service Msg {
  
  rpc CreateSmartValidator(MsgCreateSmartValidator) returns (MsgEmptyResponse);
  
  rpc GatewayRegister(MsgGatewayRegister) returns (MsgEmptyResponse);
  
  rpc GatewayIndexNum(MsgGatewayIndexNum) returns (MsgEmptyResponse);
  
  rpc GatewayUndelegate(MsgGatewayUndelegate) returns (MsgEmptyResponse);
  
  rpc GatewayBeginRedelegate(MsgGatewayBeginRedelegate) returns (MsgBeginRedelegateResponse);
  
  rpc GatewayUpload(MsgGatewayUpload) returns (MsgEmptyResponse);
  
  rpc GatewayEdit(MsgGatewayEdit) returns (MsgEmptyResponse);
}

message MsgCreateSmartValidator {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  cosmos.staking.v1beta1.Description     description         = 1 [(gogoproto.nullable) = false];
  cosmos.staking.v1beta1.CommissionRates commission          = 2 [(gogoproto.nullable) = false];
  string          min_self_delegation = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"min_self_delegation\"",
    (gogoproto.nullable)   = false
  ];
  string                   delegator_address = 4 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
  string                   validator_address = 5 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  string      pub_key            = 6 ;
  cosmos.base.v1beta1.Coin value             = 7 [(gogoproto.nullable) = false];
}


message MsgGatewayRegister {
  
  string address = 1;
  
  string gateway_url = 2;
  
  string delegation = 3;
  
  repeated string index_number = 4;
  
  string package = 5;
  
  string peer_id = 6;
  
  string machine_address = 7;
}

message MsgGatewayEdit {
  
  string address = 1;
  
  string gateway_url = 2;
}


message MsgGatewayIndexNum {
  string                   delegator_address = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
  string                   validator_address = 2 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  
  repeated string index_number = 3;
}


message MsgGatewayUndelegate {
  string                   delegator_address = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
  string                   validator_address = 2 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  cosmos.base.v1beta1.Coin amount            = 3 [(gogoproto.nullable) = false];
  
  repeated string index_number = 4;
}


message MsgGatewayBeginRedelegate {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address     = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
  string                   validator_src_address = 2 [(gogoproto.moretags) = "yaml:\"validator_src_address\""];
  string                   validator_dst_address = 3 [(gogoproto.moretags) = "yaml:\"validator_dst_address\""];
  cosmos.base.v1beta1.Coin amount                = 4 [(gogoproto.nullable) = false];
  
  repeated string index_number = 5;
}

message  MsgGatewayUpload {
  string fromAddress = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
  bytes GatewayKeyInfo  = 2 [(gogoproto.moretags) = "yaml:\"gateway_key_info\""];
}

message MsgBeginRedelegateResponse {
  google.protobuf.Timestamp completion_time = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message MsgEmptyResponse {}

